--- a/USS Enterprise.page
+++ b/USS Enterprise.page
@@ -11,4 +11,10 @@ Schooner
 - Ordered to Malta to pick up convoy vessels for Gibraltar, 2 September 1801 (BW1:568)
 - Ordered to Algiers to deliver letters to [Richard O'Brien]() and then to Gibraltar, 21 September 1801 (BW1:577)
 - Ordered to Baltimore to bring dispatches back to the USA, 3 October 1801 (BW1:592)
-- Ordered back to the Mediterranean, 8 February 1802 (BW2:55)
+- Ordered back to the Mediterranean, 8 February 1802 (BW2:55); sailed 12 February
+- Stayed on station during the cruise of [Richard Valentine Morris]() and [Edward Preble]()
+- Present during attacks on Tripoli of August and September 1804
+- Convoy to Messina, September 1804
+- Off Tripoli, October 1804
+- Returned to Syracuse, then sailed for Trieste 3 November 1804 (arrived 20 November)
+- Arrived at Venice December 1804 (BW2:119)
