departure and return

--- a/USS Boston.page
+++ b/USS Boston.page
@@ -12,3 +12,5 @@
         - Consider Tripoli to be your next station until you hear otherwise
         - Work in concert with the Swedes
         - When it comes close to the end of the sailors' enlistment period, return home
+- Sailed from New York, 28 October 1801
+- Returned to Washington, 27 October 1802 and was laid up in ordinary (BW2:119)
