74s and navy yards

--- a/Relations with government at home.page
+++ b/Relations with government at home.page
@@ -1,3 +1,7 @@
+While the navy was sending ships to the Mediterranean, the Secretary and other government officials also had other matters to attend to at home. Not only were they trying to fit out and dispatch frigates as fast as they were ready to go to sea, but they were also trying to build larger vessels, 74-gun ships of the line. Additionally, the secretary was making provisions to build a series of navy yards all along the coast. These other projects took manpower, supplies, and time. They did, however, allow some older commanders who were not fit for sea service anymore to stay connected to the navy as supervisors of the building of these ships and yards.
+
+
+
 ### Congress
 - BW2:49: Secretary of the Navy writes to [Samuel L. Mitchell]() about the problem of the smallness of the naval food ration, suggesting that Congress amend the ration to provide more meat and vegetables (see also [Stores]())
 - BW2:51-52: After six months of being at war with Tripoli, Congress enacts a law to allow the navy and selected private ships to take Tripolitan prizes, 6 February 1802
