negotiation with force

--- a/Negotiation strategies.page
+++ b/Negotiation strategies.page
@@ -22,7 +22,7 @@
 - BW1:401: [William Bainbridge]() to Sec of Navy, 17 November 1800: "I do not hesitate in saying, that 6 or 8 frigates in the Mediterranean Sea, would give us more permanent security, than any Treaty that can be made with the States of Barbary."
 - BW1:581: [Richard O'Brien]() to Sec of State, 26 Sept 1801: "we want More frigates in This Sea--and our system with those states at war with the U states should be Severity--Any act of Lenity is considered by Them as -- an act of Timidity"
 - BW2:112: [James Leander Cathcart](): "The President in his speech recommends coercive measures against Tripoli, the popular opinion so far as it is publickly declared, is millions for defense but not one cent for tribute" (10 April 1802)
-
+- BW2:126: SecState suggests to [James Leander Cathcart]() that having the whole squadron stand off Tripoli while Cathcart is negotiating might give him a better chance of getting a good deal (18 April 1802)
 
 # Use of payment
 ## Price of settlement
