orders to Cathcart

--- a/Negotiation strategies.page
+++ b/Negotiation strategies.page
@@ -23,6 +23,12 @@
 - BW1:581: [Richard O'Brien]() to Sec of State, 26 Sept 1801: "we want More frigates in This Sea--and our system with those states at war with the U states should be Severity--Any act of Lenity is considered by Them as -- an act of Timidity"
 - BW2:112: [James Leander Cathcart](): "The President in his speech recommends coercive measures against Tripoli, the popular opinion so far as it is publickly declared, is millions for defense but not one cent for tribute" (10 April 1802)
 - BW2:126: SecState suggests to [James Leander Cathcart]() that having the whole squadron stand off Tripoli while Cathcart is negotiating might give him a better chance of getting a good deal (18 April 1802)
+    - Suggests waiting for the bashaw to respond to the show of force: "As it is evidently desireable, that the first overtures should come from the Bashaw, you will wait a reasonable time for the effect of his disposition on this subject, or of the
+awe inspired by a display of our force before his eyes and his capital."
+    - Payment cannot be part of the negotiations because payment to Tripoli would jeopardize their standing with Tunis, who has just finished being paid off (BW2:127)
+    - Algiers must be taken out of any treaty as arbiter, but without making Algiers angry---make it look like it was the bashaw's idea to remove Algiers, not the USA's
+    - [Sweden]() should be consulted about the treaty, but any treaty the USA negotiates must be viewed as completely separate from anything done by Sweden, and must be seen as done with no collusion between the two countries
+    - If a treaty is made, a consul must be re-established, but as the bashaw is the one who removed the consulate in the first place, he must not expect any gifts to mark the arrival of a new consul---in the meantime, continue to rely on [Nicholas Nissen]() as a substitute
 
 # Use of payment
 ## Price of settlement
