--- a/Physical accidents to ships or persons.page
+++ b/Physical accidents to ships or persons.page
@@ -4,6 +4,7 @@ Accidents to ships or people were no small matter when the squadron was deployed
 - 7 December 1801: [USS President]() runs into a rock at Port Mahon; [Richard Dale]()'s assessment: "It is out of my power at present to say how long I shall remain here, therefore cannot say when you may expect to see me" (BW1:629)
 - [Stephen Cathalan]() reports that the best place in the Mediterranean to get ship repairs done is Toulon: "there all kinds of Conveniences are to be found" (BW2:87)
 - [USS *Essex*]() becomes fouled with a Portuguese vessel in Gibraltar harbor when the Portuguese vessel anchors too close to the *Essex*, 17 April 1802---no permanent injury (BW2:126)
+    - The next day, the Portuguese frigate again becomes fouled with the *Essex*, so [William Bainbridge]() sent a message to the commodore of the Portuguese squadron to ask him to send on board that vessel someone who was competent to unfoul them; it took them the entire day to get extricated from the Portuguese vessel and its attendant cables and anchors (BW2:129)
 
 ### To persons
 - A strange little episode: 2 midshipmen from the [USS *Essex*]() went on shore, where it seems that they dueled with each other, and Mr. Higginbotham killed Mr. Swartwout. Uncertain whether this occurred in Gibraltar or Algeciras. Higginbotham was arrested, and permission to bury Swartwout in Gibraltar was denied. (BW2:96, 27 March 1802) Swartwout was ultimately buried in Algeciras, Fort St. Iago, 28 March 1802 (BW2:97).
