--- a/Front Page.page
+++ b/Front Page.page
@@ -14,6 +14,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Science]()
 
 ## Research topics
+- [Appropriations]()
 - [Candid opinions about the war]()
 - [Captivity]()
 - [Characteristics of Barbary ships]()
