nav problems on Constellation

--- a/USS Constellation.page
+++ b/USS Constellation.page
@@ -1,3 +1,4 @@
 ### 1802 cruise
 - Captain: Alexander Murray
 - Sailed from New Castle 13 March 1802 (BW2:83)
+- Keeper of the log is not a very good navigator, as evidenced by his candid admission in the log that he messed up in his taking of bearings: "The only wa I can account for my reckoning being so far to the E.'d is our only allowing 45 feet for a Knot ; instead of 48 which would have made me nearly right." (BW2:133, 22 April 1802)
