--- a/Relations with other Barbary states.page
+++ b/Relations with other Barbary states.page
@@ -35,4 +35,4 @@ Passports were a sticking point between the USA and all of the Barbary regencies
     - 5 mounted guns with embossing, etc., with mahogany crimson-velvet-lined case (L2100)
     - 5 Pairs of golden pistols, etc. (L2100)
     - (List provided by [Rufus King](), 15 March 1802, BW2:86)
-
+- BW2:134: [William Eaton]() gets in a tiff with the bey of Tunis; the bey told Eaton to pack his bags, whereupon Eaton refused to grant any more passports for Tunisian vessels. The bey averred that he wanted peace, and that he did not think Eaton was as inclined toward peace as he was; "they must have a Consul with less fantasia & more friendly to the Barbary interests." Eaton replied that he was anticipating leaving very soon, and being replaced by [James Leander Cathcart](), but the bey said that Cathcart was not welcome in Tunis, 26 April 1802
