--- a/Candid opinions about the war.page
+++ b/Candid opinions about the war.page
@@ -2,3 +2,7 @@ Sometimes people gave their frank opinions about the progress and nature of the 
 
 ## Boring
 - 3 February 1802: "We are leading a lazy life & I assure you Sir atiresome one, no Enemy to afford a Laurel! or present a song! but a Gratification exists, that of having reserved our Countrymen from  the most wretched of all species of Slavery." ([John R. Fenwick](), BW2:47) 
+- 
+
+## Wretched
+- 26 April 1802: [William Eaton]() to [James Leander Cathcart](), about Tunis: "Think no more my Friend of this horrid Country I would rather see my wife and family in the deserts of Siberia" (BW2:135)
