--- a/Cruises.page
+++ b/Cruises.page
@@ -10,3 +10,5 @@ Commodore: Richard Valentine Morris
 - [USS *Constellation*](): [Alexander Murray]()
 - [USS *Adams*](): [Edward Preble]()
 - [USS *Enterprize*](): [Andrew Sterett]()
+- [USS *New York*](): sent as reinforcements because of potential trouble with Morocco
+- [USS *John Adams*](): sent as reinforcements because of potential trouble with Morocco
