--- a/USS Chesapeake.page
+++ b/USS Chesapeake.page
@@ -1,1 +1,6 @@
 Originally supposed to be captained by [Thomas Truxtun]() (BW2:26)
+
+### Captain [James Barron]()
+- Sailed 27 April 1802
+- Arrived in Gibraltar 25 May 1802
+- Returned to USA 1 June 1803 and laid up in ordinary (BW2:137)
