--- a/USS Constellation.page
+++ b/USS Constellation.page
@@ -2,3 +2,5 @@
 - Captain: Alexander Murray
 - Sailed from New Castle 13 March 1802 (BW2:83)
 - Keeper of the log is not a very good navigator, as evidenced by his candid admission in the log that he messed up in his taking of bearings: "The only way I can account for my reckoning being so far to the E.'d is our only allowing 45 feet for a Knot ; instead of 48 which would have made me nearly right." (BW2:133, 22 April 1802)
+- Arrived in Gibraltar 28 April 1802
+- Returned to Washington 15 March 1803 (BW2:137)
