cruise of Adams

--- a/USS Adams.page
+++ b/USS Adams.page
@@ -1,2 +1,5 @@
 - Originally meant to be captained by [Edward Preble](), who was unable to take command because of his health
 - 1802 cruise captained instead by [Hugh G. Campbell](), BW2:130
+- sailed from NY 10 June 1802
+- Arrived at Gibraltar 21 July 1802
+- Campbell relieved by [Richard Valentine Morris](), who sailed her back to Washington, arriving 21 November 1803 (BW2:137)
