--- a/Ships.page
+++ b/Ships.page
@@ -6,6 +6,7 @@
 - [USS *Constellation*]()
 - [USS *Enterprise*]()
 - [USS *Essex*]()
+- [USS *John Adams*]()
 - [USS *New York*]()
 - [USS *George Washington*]()
 - [USS *Philadelphia*]()
