differences of opinion

--- a/Candid opinions about the war.page
+++ b/Candid opinions about the war.page
@@ -6,3 +6,8 @@ Sometimes people gave their frank opinions about the progress and nature of the 
 
 ## Wretched
 - 26 April 1802: [William Eaton]() to [James Leander Cathcart](), about Tunis: "Think no more my Friend of this horrid Country I would rather see my wife and family in the deserts of Siberia" (BW2:135)
+- 
+
+## Differences of opinion about the strategy
+- Lt. [John Shaw](), 29 April 1802: " a letter from Capt Barron to Mr Gavino mentioned of Tripoli being in great want of Provitie and he was led to believe that a close Blockcade would undoubtedly brin them to our terms But I am of an Opinion that a few Shot and She & would be the Most effectual Medcine to Administer to their
+Careless renegadoes" (BW2:138)
