--- a/Weather.page
+++ b/Weather.page
@@ -9,3 +9,5 @@ Weather was a significant factor in whether or not American naval vessels were o
     - [Alexander Murray]() writes that the bad weather has also caused 50 men to be on the sick list because of exposure to the cold and wet, with 2 dead
     
 - BW2:116: [USS *President*]() delayed for at least 10 days in Gibraltar because of headwinds, till 10 March 1802
+
+- BW2:139: [USS *Constellation*]() delayed---took 12 days to go 2/3 of the way to Gibraltar, and then 4 weeks to go the remaining 1/3; the wind was so heavy at Gibraltar that [Alexander Murray]() believed the ship to be in danger if it moored there, so went to Malaga instead, 30 April 1802
