--- a/Weather.page
+++ b/Weather.page
@@ -11,3 +11,4 @@ Weather was a significant factor in whether or not American naval vessels were o
 - BW2:116: [USS *President*]() delayed for at least 10 days in Gibraltar because of headwinds, till 10 March 1802
 
 - BW2:139: [USS *Constellation*]() delayed---took 12 days to go 2/3 of the way to Gibraltar, and then 4 weeks to go the remaining 1/3; the wind was so heavy at Gibraltar that [Alexander Murray]() believed the ship to be in danger if it moored there, so went to Malaga instead, 30 April 1802
+    - BW2:139: Murray writes to [William Kirkpatrick]() that his inability to stop in at Gibraltar means he has had no contact with the squadron (see [Communications]())
