--- a/Communications.page
+++ b/Communications.page
@@ -5,3 +5,4 @@
 ## Communications amongst the squadron
 - Communications were terribly slow even though the space the squadron occupied was not that large
     - BW2:22: [William Bainbridge]() records having just received a letter on 15 January 1802 from [Richard Dale]() written on 15 December 1801
+- Communications amongst the squadron are so bad for the second cruise that [Alexander Murray]() gets all the way to Malaga without knowing that [Thomas Truxtun]() is not the commodore anymore (BW2:140, 30 April 1802)
