--- a/Relations with other Barbary states.page
+++ b/Relations with other Barbary states.page
@@ -26,13 +26,5 @@ Passports were a sticking point between the USA and all of the Barbary regencies
 - [James Simpson]() writes to Sec of State that he has not taken the hard line Dale recommended with the emperor of Morocco, regarding the passports for the Tripolitan ship; instead, he has demurred by saying Dale did not have time to discuss it with the Swedish admiral before he was forced to return home, so the emperor would have to wait for a decision until Dale's successor arrived and could speak to [Soderstrom](). " At all events it certainly is Best, should the request be ultimately found such as cannot be granted? that Sweden join in the refusal, as it can do no good that the United States come forward alone with such, before Admiral Cederstroms sentiments be known." (BW2:92, 19 March 1802)
 - BW2:114: SecNav informs [Richard Valentine Morris]() of the state of affairs with Morocco and requests, "We should be very much wanting in our duty, if these circumstances did not excite a precautionary vigilance with respect to the Emperor's movements. They may eventuate in an open declaration of hostilities which we ought to be seasonably prepared to meet. I request you therefore by all proper means, to inform yourself of all the Emperor's movements & do not fail to give me full and frequent information on the subject" (13 April 1802)
 
-## Tunis
-- List of presents to the bey of Tunis:
-    - A gun mounted with a golden barrel and a mahogany crimson-velvet-lined case (L525)
-    - Diamonds and emeralds for the gun (L345)
-    - Pair of pistols, golden, with mahogany crimson-velvet-lined case (L525)
-    - Diamonds and emeralds for the pistols (L212)
-    - 5 mounted guns with embossing, etc., with mahogany crimson-velvet-lined case (L2100)
-    - 5 Pairs of golden pistols, etc. (L2100)
-    - (List provided by [Rufus King](), 15 March 1802, BW2:86)
-- BW2:134: [William Eaton]() gets in a tiff with the bey of Tunis; the bey told Eaton to pack his bags, whereupon Eaton refused to grant any more passports for Tunisian vessels. The bey averred that he wanted peace, and that he did not think Eaton was as inclined toward peace as he was; "they must have a Consul with less fantasia & more friendly to the Barbary interests." Eaton replied that he was anticipating leaving very soon, and being replaced by [James Leander Cathcart](), but the bey said that Cathcart was not welcome in Tunis, 26 April 1802
+## [Relations with Tunis]()
+
