--- a/Physical accidents to ships or persons.page
+++ b/Physical accidents to ships or persons.page
@@ -6,6 +6,7 @@ Accidents to ships or people were no small matter when the squadron was deployed
 - [USS *Essex*]() becomes fouled with a Portuguese vessel in Gibraltar harbor when the Portuguese vessel anchors too close to the *Essex*, 17 April 1802---no permanent injury (BW2:126)
     - The next day, the Portuguese frigate again becomes fouled with the *Essex*, so [William Bainbridge]() sent a message to the commodore of the Portuguese squadron to ask him to send on board that vessel someone who was competent to unfoul them; it took them the entire day to get extricated from the Portuguese vessel and its attendant cables and anchors (BW2:129)
 - [USS *Constellation*]() loses two anchors before it even leaves America; [Alexander Murray]() requests that [William Kirkpatrick]() in Malaga supply them or help him get them in Cartagena, 30 April 1802 (BW2:140)
+    - Ends up at Gibraltar, where he requests them of [Lord Keith](), 5 May 1802 (BW2:144)
 - [USS *Boston*]() springs a bowsprit while cruising off Tripoli and goes to Messina to get it repaired, 4 May 1802 (BW2:143)
 
 ### To persons
