--- a/Relations between navy and diplomats.page
+++ b/Relations between navy and diplomats.page
@@ -1,3 +1,3 @@
 Most of the time, it seems that the naval officers and the Mediterranean diplomats, if not completely in sync with each other, at least didn't get in each others' way. Sometimes they directly clashed, though.
 
-- BW2:145: [Alexander Murray]() takes [William Eaton]() to task for hiring the *Gloria* "on Public account" and tells him that he has dismissed the *Gloria* from public service, 6 May 1802
+- BW2:145: [Alexander Murray]() takes [William Eaton]() to task for hiring the *Gloria* "on Public account" and tells him that he has dismissed the *Gloria* from public service, 6 May 1802: "However unpleasant a circumstance it is to disapprove of any measures which you have adopted & which I beleive you have deemed expedient, in your Zeal to serve our Country, yet as an Officer in the U. States service my Duty compels me to check all unwarrantable expences"
