--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -13,6 +13,7 @@ One of the constant questions for the squadron was whether to get supplies from 
     - Twenty five Bags of Peas
     - One Tierce of Rice
 - SecNav tells [Richard Valentine Morris]() that he should expect a supply ship from America within two months of his departure for the Mediterranean; it will be carrying only "Beef, Pork, Bread, Flour, Pease, and Cordage"; he's expected to get everything else in the Mediterranean (BW2:100, 1 April 1802)
+- [Alexander Murray]() in [USS *Constellation*]() reprovisions [USS *Philadelphia*]() as well as he can with stores brought from America, 2 May 1802 (BW2:146)
 
 ## In the Mediterranean
 - BW1:553: [Richard Dale]() discovers that Malta has only water, no stores, so he recommends Syracuse as a place to get supplies
