--- a/Sweden.page
+++ b/Sweden.page
@@ -8,3 +8,4 @@
 - BW2:46: Dale writes to Soderstrom that he has ordered the [USS Boston]() to act in conjunction with the Swedes off Tripoli, and he offers some advice to Soderstrom about how an attack might be made on the port, 2 February 1802
     - Note: Dale does not say that the USA will participate in an attack, as he has not been given orders that allow him to attack a port (BW2:54)
 - BW2:92: [James Simpson]() does not feel the need to attend the Moroccan emperor personally, stating that Mr. Wyk from the Swedish mission can accomplish the task better than Simpson could, and that they had discussed the strategy between themselves (19 March 1802)
+- BW2:146: [Alexander Murray]() feels confident that the Swedish fleet blockading off Tripoli is sufficient to maintain the blockade and thus he does not need to worry about them, 7 May 1802
