--- a/Front Page.page
+++ b/Front Page.page
@@ -28,7 +28,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Perceptions of people in the Mediterranean]()
 - [Physical accidents to ships or persons]()
 - [Pre-war relations with European nations]()
-- [Relations between navy and diplomats]()
+- [Naval officers’ relations with their own diplomats]()
 - [Relationships among North Africa]()
 - [Relations with government at home]()
 - [Relations with other Barbary states]()
