--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -1,17 +1,7 @@
-The navy needed to know where they could reasonably expect a favorable reception among ports in the Mediterranean. 
+# Relations with the Americans
 
-
-- "It is expected that the Port of Gibraltar will be open to your squadron. It is not doubted but that you will be received with hospitality & friendship in the Spanish Ports of Carthagena, Barcelona & the French Port of Toulon - at Leghorn & Naples, Palermo & Syracuse - Nor is it conceived that there will be any obstacle made to your entering the Ports of Malta, now in possession of the British. Letters will be written on this subject to our several ministers & to our consuls in the Mediterranean, & other convenient Ports, to enable them to give proper explanations, & to enjoin on them the attentions & Offices they may be able to render the expedition" (BW1:468)
-
-- 29 June 1801: Hailed British fleet near Cadiz with proper ceremony (BW1:495)
-
-- 12 July 1801: American navy in Gibraltar gets to watch a battle between the English and the French off Algeciras (BW1:519)
 
 - 30 July 1801: [Richard Dale]() warns [Andrew Sterett]() to make sure his men behave in [Malta](), and to obey the laws of the port (BW1:534)
-
-- 10 August 1801: [James Leander Cathcart]() sees a British conspiracy around every corner: "I imagine [the Tripolitan admiral] was encouraged by his friends Lucas & McDonogh who were continually intoxicated together" (BW1:545-46)
-
-- 28 September 1801: French took several American vessels as prize in the Mediterranean (BW1:585)
 
 ## Spain/Algeciras
 - 15 August 1801: Spanish are actually the ones taking American ships, according to 2Lt. [John Johnson](), on board the [USS *Philadelphia*]() off Gibraltar (BW1:550)
@@ -43,10 +33,14 @@ more resembles the Savages than a civilized nation." (BW1:609)
 - 
 
 ## France
+- 28 September 1801: French took several American vessels as prize in the Mediterranean (BW1:585)
 - 8 December 1801: [Richard Dale]() is affronted by the actions of the commandant of Marine at Toulon who sent a guard to ensure the Americans followed the rules of quarantine: "Such a custom may be very necessary on Board of Merchant Vessels but will not be permitted on board of Ships of War Belonging to the United States, nor will it be, on Board the President, so long as I Have the honor to Command therefore I send him on shore" (BW1:630)
 - It was important to Dale that the USA be treated as part of the international community, not as a second-class citizen, by the commandant of Toulon: "I expect to receive the same Hospitality and Attention in this port that is given to the most favoured Nation." (BW1:630)
 
 ## Great Britain
+- "It is expected that the Port of Gibraltar will be open to your squadron. It is not doubted but that you will be received with hospitality & friendship in the Spanish Ports of Carthagena, Barcelona & the French Port of Toulon - at Leghorn & Naples, Palermo & Syracuse - Nor is it conceived that there will be any obstacle made to your entering the Ports of Malta, now in possession of the British. Letters will be written on this subject to our several ministers & to our consuls in the Mediterranean, & other convenient Ports, to enable them to give proper explanations, & to enjoin on them the attentions & Offices they may be able to render the expedition" (BW1:468)
+- 29 June 1801: Hailed British fleet near Cadiz with proper ceremony (BW1:495)
+- 10 August 1801: [James Leander Cathcart]() sees a British conspiracy around every corner: "I imagine [the Tripolitan admiral] was encouraged by his friends Lucas & McDonogh who were continually intoxicated together" (BW1:545-46)
 - Mahon: Governor of Mahon assures [Richard Dale]() that if there were corsairs fitting out at Mahon to capture Americans, he would certainly put a stop to it, and that he would ensure that a ship being built for the Bey of Tunis was not actually for Tripoli (BW1:634)
 - Malta: [Samuel Barron]() receives a favorable reception from [Lord Keith]() and the British officers at Malta
 - Gibraltar: [William Bainbridge]() and [Richard Dale]() visit Sir [James Saumarez](), 27 February 1802 (BW2:68)
@@ -56,3 +50,8 @@ more resembles the Savages than a civilized nation." (BW1:609)
 
 ## Naples
 - Lt. [John Shaw]() reports that Naples wants to make a treaty with the USA, and that the governor of Naples has given orders to accommodate the American navy in any way possible, 9 February 1802 (BW2:57)
+- 
+
+# Relations amongst European nations
+- 12 July 1801: American navy in Gibraltar gets to watch a battle between the English and the French off Algeciras (BW1:519)
+- 10 May 1802: [Richard O'Brien](): "by The definitive treaty there seems to be a prospect of a reform takeing place in The Barbary System, it is Much wanted"---a change in relations between England and France might change their relationships to the Barbary states, and by extension the Barbary states' relations with the USA (BW2:147) 
