--- a/Diplomacy.page
+++ b/Diplomacy.page
@@ -1,5 +1,8 @@
 Title: "Olive Branch in One Hand"?
 
+## Diplomats' orders
+- SecState to [James Leander Cathcart](): "However able this country may be to carry on the war with effect, the expence and trouble of it, and the encreased risk whilst at war with one of the Barbary powers, are with the President just motives of solicitude for the success of your negotiation" (10 May 1802, BW2:147)
+
 
 ## Naval officers' relations with non-belligerent Barbary States
 - [Richard Dale](): writes to bey of Tunis and dey of Algiers to let them know of the squadron's presence and to assure them of his respect, and to commend the American consuls to them (BW1:508)
