--- a/Relations with other Barbary states.page
+++ b/Relations with other Barbary states.page
@@ -18,7 +18,8 @@ Passports were a sticking point between the USA and all of the Barbary regencies
     - Nissen further suggests that Sweden has asked France to be mediator for them with the Barbary states, but thinks it will be a difficult negotiation because of the cavalier attitude of the Swedish navy toward attacking Tunisian ships
     - 22 April: Negotiations, though secret, appear to be broken down between Sweden, the French mediator, and the bashaw
     - 22 April: the bashaw seems to be arming for a fight---Nissen thinks he fears something more formidable than Sweden or the USA
-
+- BW2:148: [Nicholas Nissen]() keeps [James Leander Cathcart]() informed of how the Swedish negotiations with Tripoli are going
+    - 
 
 ## Morocco
 - Morocco also wants to do something about the ships blockaded at Gibraltar. The Emperor of Morocco requested that the ships be given a passport to go home. [Richard Dale]() writes to [James Simpson]() in response: "You will please to Inform the Governor of Tangier, that the U.S. did not make war against the Bey of Tripoli; the Bey of Tripoli made war against the U.S. without any caus what ever on the part of the United States it is the wish of the President, to be at peace, and in friendship, with all nations, But as the Bey of Tripoli has made war without any cause, it is my duty, to take and detain his corsairs where ever I find them, nor do I think the good Since of His Highness the Emperor of Morocco, will permitt him to think that I have done wrong in so doing" (BW2:78, 4 March 1802)
