--- a/Economy.page
+++ b/Economy.page
@@ -1,3 +1,8 @@
+Title: "Traversing all the Seas"
+
+From [Thomas Jefferson]()'s [first inaugural address](https://jeffersonpapers.princeton.edu/selected-documents/first-inaugural-address-0): "A rising nation, spread over a wide and fruitful land, traversing all the seas with the rich productions of their industry, engaged in commerce with nations who feel power and forget right, advancing rapidly to destinies beyond the reach of mortal eye; when I contemplate these transcendent objects, and see the honour, the happiness, and the hopes of this beloved country committed to the issue and the auspices of this day, I shrink from the contemplation & humble myself before the magnitude of the undertaking." 
+
+
 ## State of Mediterranean commerce after American Revolution
 - ASP1FR1: Thomas Jefferson, *Mediterranean trade. Report of the Secretary of State relative to the Mediterranean trade. Communicated to the House of Representatives, December 30, 1790, and to the Senate, January 3, 1791.*
 
