Nissen to Cathcart

--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -30,7 +30,13 @@ more resembles the Savages than a civilized nation." (BW1:609)
 
 ### Denmark
 - 28 August 1801: Danish commodore will not swap information with [Richard Dale](), though [Nicholas Nissen]() has been a help to the squadron (BW1:562)
-- 
+- 10 May 1802: [Nicholas Nissen]() writes to [James Leander Cathcart]() about the state of affairs between Sweden and Tripoli (BW2:148)
+    - Treaty negotiations don't seem to be going well
+    - Nissen illustrates the delicate balance he has to walk between fulfilling his duty to Denmark as consul, and helping the Americans as he had promised to do
+    - Nissen reports that the Swedes have told the bashaw that they can't negotiate a treaty without consulting the Americans, because they are closely allied---this is exactly the opposite of how the Americans had been playing it.
+    - Also suggests that France is the one trying to broker the deal between Sweden and Tripoli (need independent corroboration of this?)
+    - "they [advisors to the bashaw] endeavour most strenuously to keep them [other plans] secret from me, they do me the justice to believe that I will never admit an thing that I believe to be contrary to the interests of the U.S. & for the same reasons, the Bashaw wishes some other person to be encharged with American affairs when a Negotiation takes place more congenial to his interest"
+    - Nissen's advice: Don't try to start negotiations until you have naval vessels off Tripoli and are here yourself; Nissen feels certain he would not be allowed to personally communicate with the American commodore, but if Cathcart is there in person, the bashaw's court might be more willing to allow the two diplomats to confer
 
 ## France
 - 28 September 1801: French took several American vessels as prize in the Mediterranean (BW1:585)
