--- a/Cruises.page
+++ b/Cruises.page
@@ -12,3 +12,6 @@ Commodore: Richard Valentine Morris
 - [USS *Enterprize*](): [Andrew Sterett]()
 - [USS *New York*](): sent as reinforcements because of potential trouble with Morocco
 - [USS *John Adams*](): sent as reinforcements because of potential trouble with Morocco
+
+#### Notable things
+- [Alexander Murray]() is given command of the squadron until Morris can arrive; he wastes no time issuing orders and making his presence known---castigating [William Eaton]() for waste of public funds; sending ships home or to different stations
