--- a/Conduct of naval ships.page
+++ b/Conduct of naval ships.page
@@ -23,3 +23,14 @@ These guidelines aren't quite "rules," but they're strong recommendations about 
 - If any runaway slaves should get on board the ship, they must be returned and the consul informed
 - Every salute, which is given each time the consul or the captain goes ashore, costs the USA 76 dollars (same as for Swedish, Danish, or Dutch; British and French cost 60 dollrs); every time the consul comes in an Algerine boat he pays 8 dollars
 - (from [Richard O'Brien](), BW2:72-73)
+- 
+
+## Violations
+- [Daniel McNeill]()'s business with the quarantine
+- [William Eaton]() writes in a panic about "unmilitary conduct of some one of the Gentlemen Commanding under you in the Squadron of the United States in this Sea"
+    - It seems that an American (of uncertain identity) captured and spoiled a Tunisian xebec
+    - "It cannot be supposed an object with our Government to carry on a predatory war here, even against our enemies, much less against our friends; or, if that were an object, that it should be degraded so far below any thing which has hitherto marked our national character as to descend to individual plunder and stripping."
+    - Eaton acknowledges that he has heard only one side of the story, but he believes that side
+    - " The affair has occasioned me serious perplexity here; it went very nearly to have produced a rupture with this Regency - I have followed the maxims of justice and honor in my arrangements to accommodate it: but the ammount of the payments should be reclaimed of those who committed the Violence."
+    - All he knows is that it was an American schooner, and there's only one American schooner on station, so it has to be the [USS *Enterprise]()
+    - Learns later that it was 3 privates who plundered the xebec, not any officers
