--- a/Sweden.page
+++ b/Sweden.page
@@ -9,3 +9,4 @@
     - Note: Dale does not say that the USA will participate in an attack, as he has not been given orders that allow him to attack a port (BW2:54)
 - BW2:92: [James Simpson]() does not feel the need to attend the Moroccan emperor personally, stating that Mr. Wyk from the Swedish mission can accomplish the task better than Simpson could, and that they had discussed the strategy between themselves (19 March 1802)
 - BW2:146: [Alexander Murray]() feels confident that the Swedish fleet blockading off Tripoli is sufficient to maintain the blockade and thus he does not need to worry about them, 7 May 1802
+- BW2:152-53: Tripoli has officially cut down Sweden's flag, and their gunboats are skirmishing with both Swedish and American ships off Tripoli (21 May 1802)
