--- a/Engagements with Tripoli.page
+++ b/Engagements with Tripoli.page
@@ -2,3 +2,7 @@
 - 1 August 1801
 - *Tripoli* nearly destroyed, 20 men killed and 30 wounded (of 80-man crew)
 - *Enterprise* largely unharmed, no casualties
+
+## Skirmishes
+### 16 May 1802
+- [USS *Boston*]() drove a vessel on shore near Tripoli; in conjunction with the Swedish fleet, fired on gun boats sent out to assist the stranded vessel; the Swedes were also cannonading the fort of Tripoli but the *Boston* was not involved in that (BW2:154)
