--- a/Engagements with Tripoli.page
+++ b/Engagements with Tripoli.page
@@ -6,3 +6,7 @@
 ## Skirmishes
 ### 16 May 1802
 - [USS *Boston*]() drove a vessel on shore near Tripoli; in conjunction with the Swedish fleet, fired on gun boats sent out to assist the stranded vessel; the Swedes were also cannonading the fort of Tripoli but the *Boston* was not involved in that (BW2:154)
+ 
+
+## Lack of engagements
+- 17 May 1802: [Alexander Murray]() notes that there were no Tripolitan cruisers out as of 31 April (BW2:155)
