--- a/Perceptions of people in the Mediterranean.page
+++ b/Perceptions of people in the Mediterranean.page
@@ -7,3 +7,7 @@ Naval officers often gave clues about how they perceived their enemies and even 
 
 ## Polite
 - [William Bainbridge]() comments that the governor of Tangier received them "with civility & a degree of Moorish politeness" (BW2:65, 25 February 1802)
+- 
+
+# Europeans
+- [Alexander Murray]() sees Europeans as cowardly and selfish: " Why will the narrow & selfish policy of European nations suffer those Piratical powers thus to usurp the dominion of this Sea? Ought they not rather to be put under the Ban of all civilization? Was there a chance of making war with them, upon such terms as not to effect the liberty of those, who fall into their hands, & to exchange man for man, some excuse might be alledged, but on the present form of warfare, all nations ought to cry aloud against them." (BW2:155, 18 May 1802)
