--- a/Front Page.page
+++ b/Front Page.page
@@ -20,6 +20,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Characteristics of Barbary ships]()
 - [Communications]()
 - [Conduct of naval ships]()
+- [Encounters between Europe and Barbary]()
 - [Engagements with Tripoli]()
 - [Gender]()
 - [Honor]()
