Eaton on decisiveness

--- a/Cruises.page
+++ b/Cruises.page
@@ -14,4 +14,6 @@ Commodore: Richard Valentine Morris
 - [USS *John Adams*](): sent as reinforcements because of potential trouble with Morocco
 
 #### Notable things
+- This is the first cruise after the US government declares war and gives full authority to the navy to wage war
+    - [William Eaton]() thinks that this declaration will produce a drastic change in how the Americans will fight: " We have therefore a well grounded reason to hope that our operations this summer will be decisive" (BW2:158, 21 May 1802)
 - [Alexander Murray]() is given command of the squadron until Morris can arrive; he wastes no time issuing orders and making his presence known---castigating [William Eaton]() for waste of public funds; sending ships home or to different stations
