Swedes in Tunis

--- a/Conduct of naval ships.page
+++ b/Conduct of naval ships.page
@@ -34,3 +34,4 @@ These guidelines aren't quite "rules," but they're strong recommendations about 
     - " The affair has occasioned me serious perplexity here; it went very nearly to have produced a rupture with this Regency - I have followed the maxims of justice and honor in my arrangements to accommodate it: but the ammount of the payments should be reclaimed of those who committed the Violence."
     - All he knows is that it was an American schooner, and there's only one American schooner on station, so it has to be the [USS *Enterprise]()
     - Learns later that it was 3 privates who plundered the xebec, not any officers
+    - Eaton is also relieved to learn that the Tunisians have much more to complain about how the Swedes have captured their vessels, which takes the pressure off the Americans (BW2:158, 21 May 1802)
