--- a/Coup in Tripoli.page
+++ b/Coup in Tripoli.page
@@ -3,3 +3,4 @@
 - In the circumstance that Karamanli boarded a ship to Derna, William Eaton instructed the captain of the *Gloria,* [Joseph Bounds]() (not a naval ship) to stop that ship, take Hamet and his entourage off the ship, and deliver them to the first ship of war they saw, or else take them to Leghorn to [James Leander Cathcart]() (BW2:95, 24 March 1802)
 - Eaton apparently promised Hamet $10,000, which he saw as a bargain compared to the $1,000,000 they would pay Yusuf in tribute (BW2:97, 28 March 1802)
 - Eaton writes a letter to any American commander who might intercept Hamet, asking that they give Hamet any assistance to get to Malta, where Hamet is supposed to wait for him (BW2:97, 29 March 1802)
+- [Andrew Sterett]() reports that Hamet made it to Malta; Eaton is pleased with how things are going: " things seem to be in a good train notwithstanding former reports." (BW2:158, 21 May 1802)
