Tunis as mediator

--- a/Diplomacy.page
+++ b/Diplomacy.page
@@ -28,3 +28,11 @@ Title: "Olive Branch in One Hand"?
 
 ## France
 - Big incident with Captain [Daniel McNeill](): Lied to the quarantine officer at [Toulon]() about where he had stopped in the Mediterranean in order to avoid a lengthy quarantine; he additionally left port with three French officers and an officer from the [USS *President*]() on board (BW2:28)
+- 
+
+## Tunis
+- Instead of making an international incident over the capture of a Tunisian xebec by [Andrew Sterett](), the bey of Tunis invites [William Eaton]() to talk about allowing Tunis to help negotiate a treaty between the USA and Tripoli (BW2:159, 24 May 1802)
+    - Tunisian official argues that the only reason Tripoli broke with the USA was pressure from Algiers, and wants to restore the relationship
+    - Small presents would of course be expected for Tunis's mediatorial role
+    - Eaton is not convinced that going through Tunis is a good idea: "These overtures go to prove the embarrassed situation of our enemy; and promise, if suitable advantage is taken of it, a peace on our own terms. We hold the high grounds of him at all points" 
+    - Eaton notes that Tunis is not aware of Eaton's master plan for restoring [Hamet Karamanli](); in the meantime, "let us amuse the usurper with his own propositions"
