--- a/Conduct of naval ships.page
+++ b/Conduct of naval ships.page
@@ -35,3 +35,4 @@ These guidelines aren't quite "rules," but they're strong recommendations about 
     - All he knows is that it was an American schooner, and there's only one American schooner on station, so it has to be the [USS *Enterprise]()
     - Learns later that it was 3 privates who plundered the xebec, not any officers
     - Eaton is also relieved to learn that the Tunisians have much more to complain about how the Swedes have captured their vessels, which takes the pressure off the Americans (BW2:158, 21 May 1802)
+    - The plundering that took place turns out to have been a watch and some money from a Turk; [Charles Wadsworth]() hopes that if the three "lads" get the death penalty, they will be executed in Tunis Bay so that the bey of Tunis can see that the American officers did not approve or or authorize the plundering (BW2:161, 29 May 1802)
