--- a/Physical accidents to ships or persons.page
+++ b/Physical accidents to ships or persons.page
@@ -9,6 +9,7 @@ Accidents to ships or people were no small matter when the squadron was deployed
     - Ends up at Gibraltar, where he requests them of [Lord Keith](), 5 May 1802 (BW2:144)
 - [USS *Boston*]() springs a bowsprit while cruising off Tripoli and goes to Messina to get it repaired, 4 May 1802 (BW2:143)
 - [USS *Chesapeake*]() sprung their mainmast 4 days out from America; [Richard Valentine Morris]() records that it was rotten all the way around, 3 inches in, from the hounds to the berth deck. He has had to request a new mast from [Lord Keith]() at Gibraltar (BW2:162, 31 May 1802)
+    - Worth noting that Morris is generally unhappy with the condition and trim of the *Chesapeake*
 
 ### To persons
 - A strange little episode: 2 midshipmen from the [USS *Essex*]() went on shore, where it seems that they dueled with each other, and Mr. Higginbotham killed Mr. Swartwout. Uncertain whether this occurred in Gibraltar or Algeciras. Higginbotham was arrested, and permission to bury Swartwout in Gibraltar was denied. (BW2:96, 27 March 1802) Swartwout was ultimately buried in Algeciras, Fort St. Iago, 28 March 1802 (BW2:97).
